@@ -12,8 +12,14 @@ SUBDIRS = include testsuite autoconf common \
           backends api matcher languages $(BUILDSUBDIR_REMOTE1) indexer . m4 \
 	  docs $(BUILDSUBDIR_REMOTE2) tests bindings
 
-EXTRA_DIST = Makefile_common.am ChangeLog buildall HACKING TODO PLATFORMS \
+EXTRA_DIST = Makefile_common.am ChangeLog buildall HACKING PLATFORMS \
              ar-wrapper-solaris
+
+if HAVE_PERL_XML
+dist-hook: todo_dist 
+else
+dist-hook:
+endif
 
 lib_LTLIBRARIES = libomus.la
 
@@ -21,6 +27,14 @@ lib_LTLIBRARIES = libomus.la
 # (exhibited when there are no source files)
 libomus_la_SOURCES = dummy.c
 EXTRA_libomus_la_SOURCES =
+
+todo_dist: TODO
+	@echo "Adding TODO to distribution"
+	cp TODO $(distdir)/
+
+TODO: docs/todo2html.pl
+	@echo "Generating TODO"
+	@./docs/todo2html.pl --text $(top_srcdir)/docs/todo.xml > TODO
 
 # doesn't really work as we'd hope as we get to play with the mangled symbols
 libomus_la_LDFLAGS = -export-symbols-regex 'Om[A-Z]'
